<resources>
    <string name="app_name">ByclaRide</string>
    <string name="default_web_client_id">AIzaSyAt6VovbCTnSMFg1icUSfi8LgyXehHNwFY</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="btn_camara">Camara</string>
    <string name="iv_visor">Visor</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="respuesta">Respuesta</string>
    <string name="tiempo">Tiempo:</string>
    <string name="distancia">Distancia:</string>
    <string name="buscar">Buscar</string>
    <string name="origen">Origen:</string>
    <string name="destino">Destino:</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="reportes2">REPORTES</string>
    <string name="reportar">Reportar</string>
    <string name="ingrese_un_comentario">Ingrese un comentario</string>
    <string name="camara">camara</string>
    <string name="robo">Robo</string>
    <string name="baja_iluminaci_n">Baja iluminación</string>
    <string name="bache">Bache</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="buscar2">Buscar</string>
</resources>